add math decoder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   http: ^0.13.3
+  flutter_math_fork: ^0.3.3+1
+
 
 dev_dependencies:
   flutter_test:
