--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.13.3
   flutter_launcher_icons: ^0.9.0
   flutter_math_fork: ^0.3.3+1
-
+  fancy_bottom_navigation: ^0.3.3
 
 dev_dependencies:
   flutter_test:
